multi-pod.yaml
apiVersion: v1

kind: Pod

metadata:
  name: multi-pod

spec:
  containers:

    - name: aditya-ghee
      image: anandaditya955/ghee:v1.1.22
      ports:
        - containerPort: 5656

    - name: aditya-fit
      image: anandaditya955/fit:v1.1.6
      ports:
        - containerPort: 5000

    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
