service.yaml
apiVersion: v1
kind: Service

metadata:
  name: studentapp-service
  namespace: prod-ns

spec:
  selector:
    app: studentapp

  ports:
    - protocol: TCP
      port: 5978
      targetPort: 5978

  type: ClusterIP
