studentdeployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: studentapp-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: studentapp

  template:
    metadata:
      labels:
        app: studentapp

    spec:
      containers:
        - name: studentapp-container
          image: anandaditya955/studentapp:v2

          ports:
            - containerPort: 5978
---
apiVersion: v1
kind: Service

metadata:
  name: studentapp-service

spec:
  selector:
    app: studentapp

  ports:
    - protocol: TCP
      port: 5978
      targetPort: 5978

  type: ClusterIP
