http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: studentapp-http-route
  namespace: aditya-ns

spec:
  parentRefs:
    - name: studentapp-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/studentapp

      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /studentapp

      backendRefs:
        - name: studentapp-service
          port: 5978
